load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aspect_rules_js",
    #sha256 = "09339726af909e0bf01614e64b0922ef272caafba2a899cc0dc111839fd2cfe6",
    strip_prefix = "rules_js-db88926e683106a40d0d23922d5398c34468b6ca",
    url = "https://github.com/aspect-build/rules_js/archive/db88926e683106a40d0d23922d5398c34468b6ca.tar.gz",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

load("@rules_nodejs//nodejs:repositories.bzl", "DEFAULT_NODE_VERSION", "nodejs_register_toolchains")

nodejs_register_toolchains(
    name = "nodejs",
    node_version = DEFAULT_NODE_VERSION,
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    patches = {
        "vite": ["//:patches/vite.pr4181.patch"],
    },
    pnpm_lock = "//:pnpm-lock.yaml",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()

